settings: Fix labels using full width of the modal.
Currently, the labels are using the full width of the modal, which results
in a clickable area that is too large. This commit fixes the issue by
setting the width of the labels to just fit its content.

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -1192,6 +1192,11 @@ div.settings-radio-input-parent {
     height: inherit;
 }
 
+.group-setting-label {
+    /* Avoid having the clickable area extend to the full width of the containing element */
+    width: fit-content;
+}
+
 @media (width < $lg_min) {
     .user-groups-container,
     .subscriptions-container {
